[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/control_menu.gd" type="Script" id=1]
[ext_resource path="res://textures/control_screen_resize.png" type="Texture" id=2]
[ext_resource path="res://Themes/menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/APRIFA__.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="control_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="control_screen" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="control_box" type="VBoxContainer" parent="."]
margin_top = 150.0
margin_right = 621.0
margin_bottom = 119.0

[node name="ReturntoMenu" type="Button" parent="control_box"]
margin_right = 621.0
margin_bottom = 51.0
theme = ExtResource( 3 )
custom_colors/font_color_focus = Color( 1, 0.447059, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Return to Menu"

[connection signal="pressed" from="control_box/ReturntoMenu" to="." method="_on_ReturntoMenu_pressed"]
